src/test/run-pass/deriving-via-extension-iter-bytes-struct.rs
#[deriving_iter_bytes]
struct Foo {
    x: int,
    y: int,
    z: int
}

fn main() {}


