src/test/compile-fail/bad-main.rs
// xfail-stage0
// error-pattern: bad type signature

fn main(int x) {
}
